<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_clear">Clear</string>
    <string name="action_log">Log</string>
    <string name="action_reload">Reload</string>
    <string name="action_help">Help</string>
    <string name="app_name">Mercury-SSH</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_create_config_dir">Cannot create\n%s</string>
    <string name="cannot_read_ext_storage">Cannot read external storage</string>
    <string name="command">Command</string>
    <string name="command_sent">Command sent!</string>
    <string name="confirm">Confirm execution?</string>
    <string name="connection_failed">Failed to connect to server, please see log for details</string>
    <string name="empty_config_dir">No config files found in\n%s</string>
    <string name="empty_log">Log file is empty</string>
    <string name="errors_found">One or more config files did not pass the validity check, please see log for details</string>
    <string name="no_commands">No commands defined\nfor this server</string>
    <string name="ok">OK</string>
    <string name="permission">Mercury-SSH requires STORAGE permission to read config files</string>
    <string name="sending_command">Sending command&#8230;</string>
    <string name="server">Server</string>
    <string name="title_activity_log">Log</string>
    <string name="title_activity_help">Help</string>
    <string name="validation_missing">is missing</string>
    <string name="validation_invalid">is invalid</string>
    <string name="validation_file">Failed to validate [%s]: </string>
    <string name="settings">Settings</string>
    <string name="pref_sort_cmd">Sort commands by name</string>
    <string name="pref_sort_cmd_summ">Check to sort commands by name, leave unchecked to display commands in the same order they appear in the config file</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_cat_ui_title">User Interface</string>
    <string name="pref_cat_ssh_title">SSH</string>
    <string name="pref_key_summ">Check to enable public key authentication, leave unchecked to disable it</string>
    <string name="pref_key">Enable public key authentication</string>
</resources>
